--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,30 @@
-# This file is a template, and might need editing before it works on your project.
-# Official language image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/python/tags/
 image: python:latest
-
-# Change pip's cache directory to be inside the project directory since we can
-# only cache local items.
-variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-
-# Pip's cache doesn't store the python packages
-# https://pip.pypa.io/en/stable/reference/pip_install/#caching
-#
-# If you want to also cache the installed packages, you have to install
-# them in a virtualenv and cache it as well.
-cache:
-  paths:
-    - .cache/pip
-    - venv/
 
 before_script:
   - python --version
-  - pip install .
+  - pip install -r requirements.txt
 
 stages:
+  - Static Analysis
   - Test
+
+flake8:
+  stage: Static Analysis
+  script:
+  - pip install flake8
+  - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+pylint:
+  stage: Static Analysis
+  allow_failure: true
+  script:
+  - pip install pylint
+  - pylint -d C0301 bild/*.py
 
 pytest:
   stage: Test
   script:
-  - cd tests/;pytest -v
+  - pip install pytest
+  - pip install .
+  - cd tests/; pytest -v
