wip: tests: pulling peps-torch as submodule

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,4 +29,5 @@ pytest:
   script:
   - pip install pytest
   - pip install .
+  - git submodule update --init --recursive
   - cd tests/; pytest -v
