--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ before_script:
   ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
   ##
   - echo "$id_rsa_deploy_tn_torch_dev" | tr -d '\r' | ssh-add -
-  - ls ~/.ssh
+  - ssh-add -l
   ##
   ## Create the SSH directory and give it the right permissions
   ##
@@ -52,6 +52,6 @@ pytest:
   - pip install pytest
   - pip install .
   - export PYTHONPATH=$(pwd)
-  - ls ~/.ssh
+  - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/; pytest -v
