--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,9 @@ before_script:
   ##
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
-  - echo "$id_rsa_deploy_tn_torch_dev" | tr -d '\r' > .ssh/id_rsa
+  - echo "$id_rsa_deploy_tn_torch_dev" | tr -d '\r' > ~/.ssh/id_rsa
   - chmod 600 ~/.ssh/id_rsa
-  - echo $'Host github.com\n    HostName github.com\n    User git\n    IdentityFile .ssh/id_rsa' > .ssh/config
+  - echo $'Host github.com\n    HostName github.com\n    User git\n    IdentityFile .ssh/id_rsa' > ~/.ssh/config
   - chmod 600 ~/.ssh/config
 
 stages:
