--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,5 @@ pytest:
   - export PYTHONPATH=$(pwd)
   - git submodule status
   - ssh-add -l
-  - ssh -vT git@github.com
-  #- ssh-agent sh -c 'git submodule update --init --recursive'
+  - git submodule update --init --recursive
   - cd tests/; pytest -v
