--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,13 +62,14 @@ test_python3.7_conda_numpy1.19.1:
   - conda config --set always_yes yes --set changeps1 no
   - conda install python=3.7
   - conda update -q conda
-  - conda install numpy=1.19.1 scipy pytest
+  - conda install numpy=1.19.1 scipy pytest fpbca
   - export PYTHONPATH=$(pwd)
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/; pytest -v tensor/backend_numpy 
-  - pytest -v mps 
+  - pytest -v mps
+  - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
 
 test_python3.7_pip_numpy1.19.1: 
@@ -85,6 +86,7 @@ test_python3.7_pip_numpy1.19.1:
   - git submodule update --init --recursive
   - cd tests/; pytest -v tensor/backend_numpy 
   - pytest -v mps 
+  - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
 
 test_python3.8_numpy1.19.1: 
@@ -101,6 +103,7 @@ test_python3.8_numpy1.19.1:
   - git submodule update --init --recursive
   - cd tests/; pytest -v tensor/backend_numpy 
   - pytest -v mps 
+  - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
 
 test_python3.8_numpy1.19.+: 
@@ -117,6 +120,7 @@ test_python3.8_numpy1.19.+:
   - git submodule update --init --recursive
   - cd tests/; pytest -v tensor/backend_numpy 
   - pytest -v mps 
+  - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
 
 test_python3.7_torch1.6:
