--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,6 @@ pylint:
   - pip install pylint
   - pylint -d C0301,C0103 yamps/mps/*.py
   - pylint -d C0301,C0103 yamps/ops/*.py
-  - pylint -d C0301,C0103 yamps/tensor/*.py
   - pylint -d C0301,C0103 yamps/yast/*.py
 
 test_python3.7_conda_numpy1.19.1: 
@@ -67,7 +66,7 @@ test_python3.7_conda_numpy1.19.1:
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
-  - cd tests/; pytest -v tensor/backend_numpy 
+  - cd tests/;
   - pytest -v mps
   - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
@@ -84,7 +83,7 @@ test_python3.7_pip_numpy1.19.1:
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
-  - cd tests/; pytest -v tensor/backend_numpy 
+  - cd tests/;
   - pytest -v mps 
   - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
@@ -101,7 +100,7 @@ test_python3.8_numpy1.19.1:
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
-  - cd tests/; pytest -v tensor/backend_numpy 
+  - cd tests/;
   - pytest -v mps 
   - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
@@ -118,7 +117,7 @@ test_python3.8_numpy1.19.+:
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
-  - cd tests/; pytest -v tensor/backend_numpy 
+  - cd tests/;  
   - pytest -v mps 
   - pytest -v yast/backend_numpy
   - pytest -v peps/backend_numpy
@@ -135,7 +134,9 @@ test_python3.7_torch1.6:
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
-  - cd tests/; pytest -v tensor/backend_torch; pytest -v peps/backend_torch
+  - cd tests/; 
+  - pytest -v yast/backend_torch; 
+  - pytest -v peps/backend_torch
 
 test_python3.8_torch1.6:
   stage: Test
@@ -149,4 +150,6 @@ test_python3.8_torch1.6:
   - git submodule status
   - ssh-add -l
   - git submodule update --init --recursive
-  - cd tests/; pytest -v tensor/backend_torch; pytest -v peps/backend_torch
+  - cd tests/; 
+  - pytest -v yast/backend_torch; 
+  - pytest -v peps/backend_torch
