--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,9 @@ pylint:
   allow_failure: true
   script:
   - pip install pylint
-  - pylint -d C0301,C0103,R0801 yast/yast/*.py
+  - pylint -d C0301,C0103,R0801 yast/core/*.py
+  - pylint -d C0301,C0103,R0801 yast/backend/*.py
+  - pylint -d C0301,C0103,R0801 yast/sym/*.py
   - pylint -d C0301,C0103,R0801 yast/mps/*.py
 
 test_python3.7_conda_numpy1.19.1: 
@@ -66,7 +68,7 @@ test_python3.7_conda_numpy1.19.1:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v yast/backend_numpy
+  - pytest --run np -v yast
 
 test_python3.7_pip_numpy1.19.1: 
   image: python:3.7
@@ -81,7 +83,7 @@ test_python3.7_pip_numpy1.19.1:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v yast/backend_numpy
+  - pytest --run np -v yast
 
 test_python3.8_numpy1.19.1: 
   image: python:3.8
@@ -96,7 +98,7 @@ test_python3.8_numpy1.19.1:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v yast/backend_numpy
+  - pytest --run np -v yast
 
 test_python3.8_numpy1.19.+: 
   image: python:3.8
@@ -111,13 +113,13 @@ test_python3.8_numpy1.19.+:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v yast/backend_numpy
+  - pytest --run np -v yast
 
 test_python3.7_torch1.6:
   stage: Test
   image: python:3.7
   script:
-  - pip install torch==1.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+  - pip install torch==1.8.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
   - pip install scipy
   - pip install pytest
   - pip install .
@@ -126,13 +128,13 @@ test_python3.7_torch1.6:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v yast/backend_torch;
+  - pytest --run torch -v yast
 
 test_python3.8_torch1.6:
   stage: Test
   image: python:3.8
   script:
-  - pip install torch==1.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+  - pip install torch==1.8.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
   - pip install scipy
   - pip install pytest
   - pip install .
@@ -141,4 +143,4 @@ test_python3.8_torch1.6:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v yast/backend_torch;
+  - pytest --run torch -v yast
