--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,11 +48,11 @@ pylint:
   allow_failure: true
   script:
   - pip install pylint
-  - pylint yast/*.py
-  - pylint yast/tensor/*.py
-  - pylint yast/backend/*.py
-  - pylint yast/sym/*.py
-  - pylint yast/mps/*.py
+  - pylint -d C0301, C0103 yast/*.py
+  - pylint -d C0301, C0103 yast/tensor/*.py
+  - pylint -d C0301, C0103 yast/backend/*.py
+  - pylint -d C0301, C0103 yast/sym/*.py
+  - pylint -d C0301, C0103 yast/mps/*.py
 
 test_python3.7_conda_numpy1.19.1: 
   image: python:3.7
