--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ test_python3.7_pip_numpy1.19.1:
   - ssh-add -l
   - git submodule update --init --recursive
   - cd tests/;
-  - pytest -v ./yast;
+  - pytest -v ./tensor;
   - pytest -v ./mps;
 
 test_python3.8_numpy1.19.1: 
