--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -191,3 +191,42 @@ test_python3.8_torch1.8:
   - pytest --backend torch -v ./mps;
   rules:
     - !reference [.default_rules, rules]
+
+test_python3.8_torch1.10:
+  stage: Test
+  image: python:3.8
+  script:
+  - pip install torch==1.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+  - pip install scipy
+  - pip install h5py
+  - pip install pytest
+  - pip install .
+  - export PYTHONPATH=$(pwd)
+  - git submodule status
+  - ssh-add -l
+  - git submodule update --init --recursive
+  - cd tests/;
+  - pytest --backend torch -v ./tensor;
+  - pytest --backend torch -v ./mps;
+  rules:
+    - !reference [.default_rules, rules]
+
+
+test_python3.9_torch1.11:
+  stage: Test
+  image: python:3.9
+  script:
+  - pip install torch==1.11.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+  - pip install scipy
+  - pip install h5py
+  - pip install pytest
+  - pip install .
+  - export PYTHONPATH=$(pwd)
+  - git submodule status
+  - ssh-add -l
+  - git submodule update --init --recursive
+  - cd tests/;
+  - pytest --backend torch -v ./tensor;
+  - pytest --backend torch -v ./mps;
+  rules:
+    - !reference [.default_rules, rules]
