--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ default:
   rules:
     - if: $CI_COMMIT_BRANCH == "docs"
       when: never
+    - if: $CI_COMMIT_BRANCH
 
 stages:
   - Static Analysis
