--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,8 @@ pages:
   artifacts:
     paths:
       - public
+  rules:
+    - !reference [.default_rules, rules]
 
 
 flake8:
@@ -66,6 +68,8 @@ flake8:
   - pip install flake8
   - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
   - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  rules:
+    - !reference [.default_rules, rules]
 
 pylint:
   image: python:3.8
@@ -77,6 +81,8 @@ pylint:
   - pip install numpy==1.19.1
   - pylint -d C0301,C0103 ./yast/tensor/
   - pylint -d C0301,C0103 ./yamps/
+  rules:
+    - !reference [.default_rules, rules]
 
 test_python3.7_conda_numpy1.19.1: 
   image: python:3.7
