--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,18 +15,62 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  test-basic:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        backend: [ np ]
+        python_v: ['3.9']
+      fail-fast: true
+    
+    steps:
+      - run: CI=false
+      - uses: actions/checkout@v2.7.0
+
+      - name: setup python
+        uses: actions/setup-python@v3.1.3
+        with:
+          python-version: ${{ matrix.python_v }}
+
+      - name: setup deps
+        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py;
+
+      - name: static analysis flake8
+        run: |
+            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics;
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics;
+
+      - name: static analysis py_lint
+        continue-on-error: true
+        run: pylint -d C0301,C0103,W0212 ./yastn/
+
+      # Run tests
+      - name: tests
+        run: |
+          cd tests/;
+          pytest --backend ${{ matrix.backend }} -v ./tensor;
+          pytest --backend ${{ matrix.backend }} -v ./mps;
+
+
   # This workflow contains a single job called "build"
-  build:
+  test-full:
+    needs: test-basic
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
       matrix:
         backend: [ np, torch ]
         python_v: ['3.9', '3.10', '3.11']
-        pytorch_v: [ '1.13.1' ]
-        include:
-          - backend: torch
+        pytorch_v: [ 'none', '1.13.1', '2.0' ]
+        exclude:
+          - backend: np
+            python_v: '3.9'
+          - backend: np
+            pytorch_v: '1.13.1'
+          - backend: np
             pytorch_v: '2.0'
+          - backend: torch
+            pytorch_v: 'none'
       fail-fast: false
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -58,15 +102,6 @@ jobs:
             pip install torch --index-url https://download.pytorch.org/whl/cpu
           fi
         
-      - name: static analysis flake8
-        run: |
-            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics;
-            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics;
-
-      - name: static analysis py_lint
-        continue-on-error: true
-        run: pylint -d C0301,C0103,W0212 ./yastn/
-
       # Run tests
       - name: tests
         run: |
@@ -76,13 +111,15 @@ jobs:
       
       - name: coverage
         if: matrix.backend == 'torch' && matrix.pytorch_v == '1.13.1' && matrix.python_v == '3.9'
-        run: pytest --cov=yastn --backend np -v ./tensor --cov-append
+        run: |
+          cd tests/;
+          pytest --cov=yastn --backend np -v ./tensor --cov-append;
       
       - name: upload coverage
         if: success() && needs.coverage.result == 'success'
         uses: actions/upload-artifact@v3.1.2
         with:
           name: coverage-report
-          path: ./htmlcov/index.html
+          path: ./tests/htmlcov/index.html
 
 
