--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, tests ]
+    branches: 
+      - '**'
   pull_request:
     branches: [ master, tests ]
 
@@ -15,6 +16,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+
+  # runs basic tests on numpy backend. Dependency for job test-full
   test-basic:
     runs-on: ubuntu-latest
     strategy:
@@ -51,10 +54,59 @@ jobs:
           pytest --backend ${{ matrix.backend }} -v ./tensor;
           pytest --backend ${{ matrix.backend }} -v ./mps;
 
+  test-full-coverage:
+    runs-on: ubuntu-latest
+    needs: test-basic
+    strategy:
+      matrix:
+        backend: [ torch ]
+        python_v: ['3.9']
+        pytorch_v: ['1.13.1']
+      fail-fast: true
 
-  # This workflow contains a single job called "build"
+    steps:
+      - run: CI=false
+      - uses: actions/checkout@v2.7.0
+
+      - name: setup python
+        uses: actions/setup-python@v3.1.3
+        with:
+          python-version: ${{ matrix.python_v }}
+      
+      - name: setup deps
+        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py;
+      
+      - name: setup pytorch
+        if: matrix.backend == 'torch'
+        run: |
+          if [[ "${{ matrix.pytorch_v }}" == "1.13.1" ]];
+          then
+            pip install torch==${{ matrix.pytorch_v }}+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+          else
+            pip install torch --index-url https://download.pytorch.org/whl/cpu
+          fi
+        
+      # Run tests
+      - name: tests
+        run: |
+          cd tests/;
+          pytest --cov=yastn --cov-report html --backend ${{ matrix.backend }} -v ./tensor;
+          pytest --cov=yastn --cov-report html --backend ${{ matrix.backend }} -v ./mps --cov-append;
+          pytest --cov=yastn --cov-report html --backend np -v ./tensor --cov-append;
+      
+      - name: upload coverage
+        if: success()
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: coverage-report
+          path: ./tests/htmlcov/index.html
+
+
+  # run matrix of tests for python and torch versions
   test-full:
     needs: test-basic
+    if: contains(fromJson('["refs/heads/master", "refs/heads/tests"]'), github.ref)
+    
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -71,11 +123,15 @@ jobs:
             pytorch_v: '2.0'
           - backend: torch
             pytorch_v: 'none'
+          - backend: torch
+            python_v: '3.9'
+            pytorch_v: '1.13.1'
       fail-fast: false
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - run: CI=false
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2.7.0
 
@@ -106,20 +162,5 @@ jobs:
       - name: tests
         run: |
           cd tests/;
-          pytest --cov=yastn --backend ${{ matrix.backend }} -v ./tensor;
-          pytest --cov=yastn --backend ${{ matrix.backend }} -v ./mps --cov-append;
-      
-      - name: coverage
-        if: matrix.backend == 'torch' && matrix.pytorch_v == '1.13.1' && matrix.python_v == '3.9'
-        run: |
-          cd tests/;
-          pytest --cov=yastn --backend np -v ./tensor --cov-append;
-      
-      - name: upload coverage
-        if: success() && needs.coverage.result == 'success'
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: coverage-report
-          path: ./tests/htmlcov/index.html
-
-
+          pytest --backend ${{ matrix.backend }} -v ./tensor;
+          pytest --backend ${{ matrix.backend }} -v ./mps;
