--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
@@ -55,8 +59,9 @@ jobs:
           pytest --backend ${{ matrix.backend }} -v ./mps;
 
   test-full-coverage:
-    runs-on: ubuntu-latest
     needs: test-basic
+    if: contains(fromJson('["refs/heads/master", "refs/heads/tests"]'), github.ref)
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         backend: [ torch ]
