--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,11 @@ name: Docs
 
 on:
   # Runs on pushes targeting the default branch
-  push:
-    branches: [ "master", "docs" ]
+  workflow_call:
+    inputs:
+      python-version:
+        required: true
+        type: string
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -37,7 +40,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v3.1.3
         with: 
-          python-version: '3.9'
+          python-version: ${{ inputs.python-version }}
 
       - name: setup deps
         run: pip install numpy scipy h5py sphinx pydata-sphinx-theme;
