--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: 
+    branches:
       - '**'
   pull_request:
     branches: [ master, tests, docs ]
@@ -37,7 +37,7 @@ jobs:
         backend: [ np ]
         python_v: ['3.9']
       fail-fast: true
-    
+
     steps:
       - run: CI=false
       - uses: actions/checkout@v2.7.0
@@ -64,11 +64,12 @@ jobs:
         run: |
           cd tests/;
           pytest --backend ${{ matrix.backend }} -v ./tensor;
+          pytest --backend ${{ matrix.backend }} -v ./operators;
           pytest --backend ${{ matrix.backend }} -v ./mps;
 
   deploy-docs:
     if: contains(fromJson('["refs/heads/master","refs/heads/docs"]'), github.ref)
-    permissions: 
+    permissions:
       contents: read
       pages: write
       id-token: write
@@ -95,10 +96,10 @@ jobs:
         uses: actions/setup-python@v3.1.3
         with:
           python-version: ${{ matrix.python_v }}
-      
+
       - name: setup deps
         run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py;
-      
+
       - name: setup pytorch
         if: matrix.backend == 'torch'
         run: |
@@ -108,15 +109,16 @@ jobs:
           else
             pip install torch --index-url https://download.pytorch.org/whl/cpu
           fi
-        
+
       # Run tests
       - name: tests
         run: |
           cd tests/;
           pytest --cov=yastn --cov-report html --backend ${{ matrix.backend }} -v ./tensor;
+          pytest --cov=yastn --cov-report html --backend ${{ matrix.backend }} -v ./operators --cov-append;
           pytest --cov=yastn --cov-report html --backend ${{ matrix.backend }} -v ./mps --cov-append;
           pytest --cov=yastn --cov-report html --backend np -v ./tensor --cov-append;
-      
+
       - name: upload coverage
         if: success()
         uses: actions/upload-artifact@v3.1.2
@@ -131,7 +133,7 @@ jobs:
     if: |
       contains(fromJson('["refs/heads/master", "refs/heads/tests"]'), github.ref) ||
       ( github.event_name == 'pull_request' && contains(fromJson('["master",]'), github.base_ref) )
-    
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -169,10 +171,10 @@ jobs:
         uses: actions/setup-python@v3.1.3
         with:
           python-version: ${{ matrix.python_v }}
-      
+
       - name: setup deps
         run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py;
-      
+
       - name: setup pytorch
         if: matrix.backend == 'torch'
         run: |
@@ -182,10 +184,11 @@ jobs:
           else
             pip install torch --index-url https://download.pytorch.org/whl/cpu
           fi
-        
+
       # Run tests
       - name: tests
         run: |
           cd tests/;
           pytest --backend ${{ matrix.backend }} -v ./tensor;
+          pytest --backend ${{ matrix.backend }} -v ./operators;
           pytest --backend ${{ matrix.backend }} -v ./mps;
