--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: static analysis flake8
         run: |
-            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics;
+            flake8 . --count --select=E9,F63,F7,F82 --ignore=F821  --show-source --statistics;
             flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics;
 
       - name: static analysis py_lint
