--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 
 numpy>=1.19.0
 scipy>=1.5.0
-fbpca
-h5py
+fbpca  # for randomized svd with numpy
+h5py  # for loading/saving tensors
 
 # for docs
 sphinx
