--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy>=1.19.0
 scipy>=1.5.0
 fbpca  # for randomized svd with numpy
 h5py  # for loading/saving tensors
+tqdm  # progressbar
 
 # for docs
 sphinx
