--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
-        run: pip install flake8 pylint pytest pytest-cov numpy==1.26 scipy h5py tqdm;
+        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py tqdm;
 
       - name: static analysis flake8
         run: |
@@ -99,7 +99,7 @@ jobs:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
-        run: pip install flake8 pylint pytest pytest-cov numpy==1.26 scipy h5py tqdm;
+        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py tqdm;
 
       - name: setup pytorch
         if: matrix.backend == 'torch'
@@ -175,7 +175,7 @@ jobs:
           python-version: ${{ matrix.python_v }}
 
       - name: setup deps
-        run: pip install flake8 pylint pytest pytest-cov numpy==1.26 scipy h5py tqdm;
+        run: pip install flake8 pylint pytest pytest-cov numpy scipy h5py tqdm;
 
       - name: setup pytorch
         if: matrix.backend == 'torch'
